tests/snapshots/run_wpt_conformance__onnx_batchNormalization_float32_3D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "batch_normalization.https.any.js",
    "batchNormalization float32 3D tensor default options",
    "onnx",
    "PASS",
)
